1.邮件收件人组配置优化 2.健康码截图上传菜单

--- a/spring-boot-activiti/src/main/resources/templates/index.html
+++ b/spring-boot-activiti/src/main/resources/templates/index.html
@@ -94,6 +94,13 @@
 		<div id="sidebar-left" class="col-xs-2 col-sm-2">
 			<ul class="nav main-menu">
 				<li>
+					<a href="jkmlist" class="active ajax-link">
+						<i class="fa fa-dashboard"></i>
+						<span class="hidden-xs">上传健康码截图</span>
+					</a>
+				</li>
+
+				<li>
 					<a href="processlist" class="active ajax-link">
 						<i class="fa fa-dashboard"></i>
 						<span class="hidden-xs">已部署的工作流</span>
