1。实际开始时间和实际结束时间必须同时填写或都不填写。 2。工作日请假统计，获取两个日期之间的工作日天数（排除节假日以及周六周日）

--- a/spring-boot-activiti/src/main/resources/templates/activiti/leaveapply.html
+++ b/spring-boot-activiti/src/main/resources/templates/activiti/leaveapply.html
@@ -90,9 +90,13 @@
                 return;
             }
 
-            $.post("startleave", $("form").serialize(), function () {
-                alert("申请成功");
-                LoadAjaxContent("leaveapply");
+            $.post("startleave", $("form").serialize(), function (msg) {
+                if (msg.state=="success"){
+                    alert("申请成功");
+                    LoadAjaxContent("leaveapply");
+                }else {
+                    alert("申请失败，周六周日不需要请假!");
+                }
             });
         });
 
