--- a/spring-boot-activiti/src/main/resources/templates/index.html
+++ b/spring-boot-activiti/src/main/resources/templates/index.html
@@ -114,6 +114,7 @@
 					</a>
 					<ul class="dropdown-menu">
 						<li><a class="ajax-link" href="leaveapply">请假OA</a></li>
+						<li><a class="ajax-link" href="employeeattendance">员工考勤</a></li>
 						<!--<li><a class="ajax-link" href="purchase">物资采购</a></li>-->
 					</ul>
 				</li>
