--- a/spring-boot-activiti/src/main/resources/templates/activiti/leaveapply.html
+++ b/spring-boot-activiti/src/main/resources/templates/activiti/leaveapply.html
@@ -79,9 +79,21 @@
                 alert("开始时间不能为空！");
                 return;
             }
+            var startime = new Date(start);
+            var nowFormat = getNowFormatDate();
+            var now = new Date(nowFormat);
+            if (startime.getTime() <= now.getTime()) {
+                alert("开始时间只能是未来时间！");
+                return;
+            }
             var end = document.getElementById("end").value;
             if (end == "") {
                 alert("结束时间不能为空！");
+                return;
+            }
+            var endtime = new Date(end);
+            if (endtime.getTime() < startime.getTime()) {
+                alert("结束时间不能小于开始时间！");
                 return;
             }
             var reason = document.getElementById("reason").value.trim();
@@ -89,16 +101,31 @@
                 alert("请假原因不能为空！");
                 return;
             }
-
             $.post("startleave", $("form").serialize(), function (msg) {
-                if (msg.state=="success"){
+                if (msg.state == "success") {
                     alert("申请成功");
                     LoadAjaxContent("leaveapply");
-                }else {
+                } else {
                     alert("申请失败，周六周日不需要请假!");
                 }
             });
         });
+
+        function getNowFormatDate() {
+            var date = new Date();
+            var seperator1 = "-";
+            var year = date.getFullYear();
+            var month = date.getMonth() + 1;
+            var strDate = date.getDate();
+            if (month >= 1 && month <= 9) {
+                month = "0" + month;
+            }
+            if (strDate >= 0 && strDate <= 9) {
+                strDate = "0" + strDate;
+            }
+            var currentdate = year + seperator1 + month + seperator1 + strDate;
+            return currentdate;
+        }
 
         $('#start').datepicker({setDate: new Date(), dateFormat: 'yy-mm-dd'});
         $('#end').datepicker({setDate: new Date(), dateFormat: 'yy-mm-dd'});
